<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="copyright"><![CDATA[
    Copyright &copy; 2020 Vexelon Microservices]]></string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_yes">Yes</string>
    <string name="text_not_now">Not Now</string>
    <string name="text_pick_date">Select date</string>
    <string name="text_pick_time">Select time</string>
    <string name="text_enabled">Enabled</string>
    <string name="text_disabled">Disabled</string>
    <string name="text_n_days">%1$s days</string>
    <string name="text_code">Code</string>
    <string name="text_source">Source</string>
    <string name="text_converted">Converted</string>
    <string name="drawer_open">Open navigation</string>
    <string name="drawer_close">Close navigation</string>
    <string name="app_name">Currency BG</string>
    <string name="last_update">Last update</string>
    <string name="last_update_updating_text">Downloading ...</string>
    <string name="last_update_reloading_text">Reloading ...</string>
    <string name="error_download_rates">Failed downloading rates.</string>
    <string name="error_parse_rates">Failed parsing rates!</string>
    <string name="error_db_load">Failed reading from db!</string>
    <string name="error_db_save">Failed saving to db!</string>
    <string name="error_db_remove">Failed removing from db!</string>
    <string name="error_sources_selection">A minimum of one source selection is required!</string>
    <string name="error_sources_selection_max">Only 3 sources can be selected at a time!</string>
    <string name="error_maintenance">Server down for maintenance! Try again later.</string>
    <string name="error_no_entries">No new currency entries.</string>
    <string name="error_add_wallet_entry">Missing or incorrect field data!</string>
    <string name="error_convert_empty">Missing converted currencies.</string>
    <string name="vote_invite_title">Vote for %1$s</string>
    <string name="vote_invite_content"><![CDATA[
    We noticed you are using <b>%1$s</b> quite often and that\'s just awesome!<br><br>Would you like to vote for the app and leave us some feedback at the Play Store?]]></string>
    <string name="about_changelog">Changelog</string>
    <string name="about_license">GNU License v3.0</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_issue_appdev">Report an issue</string>
    <string name="about_issue_appdev_text">Report an issue you found or send us your feature request</string>
    <string name="about_join_appdev_authors">Developers</string>
    <string name="about_join_appdev">Are you a coder? Send us your pull requests</string>
    <string name="about_logo">Logo icon</string>
    <string name="about_logo_text">StremArt - https://stremena.com</string>
    <string name="about_3rdparty_icons">Third-party icons</string>
    <string name="about_3rdparty">Third-party libraries</string>
    <string name="about_twitter">We are on Twitter</string>
    <string name="about_fb">Find us on Facebook</string>
    <string name="about_contact">Contact</string>
    <string name="about_contact_email">Email us</string>
    <string name="about_more_apps">More apps!</string>
    <string name="about_more_apps_text">Check out some of our other apps</string>
    <string name="drawer_menu_currencies">Currencies</string>
    <string name="drawer_menu_convert">Convert</string>
    <string name="drawer_menu_wallet">Wallet</string>
    <string name="drawer_menu_exchanges">Currency Exchange</string>
    <string name="hint_currency_remove">Tap and hold to remove.</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="action_clear">Clear</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_addcurrency">Add currency</string>
    <string name="action_currency_added">Added: %1$s</string>
    <string name="action_currency_removed">Removed: %1$s</string>
    <string name="action_wallet_removed">Removed: %1$s</string>
    <string name="action_addwalletentry">Add wallet entry</string>
    <string name="action_currency_details">%1$s at %2$s</string>
    <string name="action_filter">Filter</string>
    <string name="action_rate">Rates</string>
    <string name="action_rate_title">Show rates for</string>
    <string name="action_rate_buy_desc">Buy rates</string>
    <string name="action_rate_sell_desc">Sell rates</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_title">Sort by</string>
    <string name="action_sort_name_asc">Name A-Z</string>
    <string name="action_sort_name_desc">Name Z-A</string>
    <string name="action_sort_code_asc">Code A-Z</string>
    <string name="action_sort_code_desc">Code Z-A</string>
    <string name="action_sortby_name">Name</string>
    <string name="action_sortby_code">Code</string>
    <string name="action_filter_title">Select filter</string>
    <string name="action_filter_none">None</string>
    <string name="action_filter_crypto">Cryptocurrencies</string>
    <string name="action_filter_top6">Forex Top 6</string>
    <string name="action_filter_top8">Top 8 traded</string>
    <string name="action_filter_custom">Custom</string>
    <string name="action_filter_desc">%1$s selected</string>
    <string name="action_share">Share</string>
    <string name="action_share_footer">Get the latest Bulgarian Lev rates with Currency BG - %1$s</string>
    <string name="text_share_convert">Rates for convertion of %1$s.</string>
    <string name="text_rates_details"><![CDATA[
    Downloaded <b>%1$s</b> exchange rates for the past 3 days.]]></string>
    <string name="source_tavex">Tavex</string>
    <string name="source_polana">Polana1</string>
    <string name="source_fib">FIBank</string>
    <string name="source_factorin">Factor I.N.</string>
    <string name="source_unicredit">UniCredit</string>
    <string name="source_sgeb">SG Expressbank</string>
    <string name="source_cryptobg">crypto.bg</string>
    <string name="source_changepartner">Change Partner</string>
    <string name="source_forexhouse">Forex House</string>
    <string name="source_allianz">Allianz Bank</string>
    <string name="source_cryptobank">CryptoBank</string>
    <string name="source_bitcoinshouse">BitcoinsHouse</string>
    <string name="source_xchangebg">xChange.bg</string>
    <string name="source_altcoins">Altcoins</string>
    <string name="source_tavex_full">Tavex Bulgaria</string>
    <string name="source_polana_full">"POLANA 1" OOD</string>
    <string name="source_fib_full">First Investment Bank</string>
    <string name="source_factorin_full">FACTOR I.N.</string>
    <string name="source_unicredit_full">UniCredit Bulbank AD</string>
    <string name="source_sgeb_full">Societe Generale Expressbank</string>
    <string name="source_cryptobg_full">Bitcoin Solutions Ltd</string>
    <string name="source_changepartner_full">Change Partner - "Georgi Chuchulain" Co.</string>
    <string name="source_forexhouse_full">Forex House Bulgaria</string>
    <string name="source_allianz_full">Allianz Bank Bulgaria</string>
    <string name="source_cryptobank_full">Cryptobank Bulgaria</string>
    <string name="source_bitcoinshouse_full">BitcoinsHouse Bulgaria</string>
    <string name="source_xchangebg_full">GLOBAL EXCHANGE OOD</string>
    <string name="source_altcoins_full">Altcoins.bg</string>
    <string name="action_sources">Sources</string>
    <string name="action_sources_title">Show currency rates for</string>
    <string name="action_sources_desc">Show currency rates for %1$s</string>
    <string name="action_info">Info</string>
    <string name="action_settings">Settings</string>
    <string name="prefs_title">Currency BG Settings</string>
    <string name="prefs_key_appprefs">app_prefs</string>
    <string name="pref_value_update">Changed to %1$s</string>
    <string name="pref_precision_name_simple">Simple</string>
    <string name="pref_precision_name_advanced">Advanced</string>
    <string name="pref_precision_default">advanced</string>
    <string name="pref_precision_title">Currencies precision</string>
    <string name="pref_precision_summary">Precision to use when displaying currency rates</string>
    <string name="pref_rateus_title">Rate Currency BG</string>
    <string name="pref_rateus_summary">Support us by rating this app</string>
    <string name="pref_wifi_only_title">Wi-Fi only background downloads</string>
    <string name="pref_wifi_only_summary">Background currency downloads only over Wi-Fi connections</string>
    <string name="wallet_code">Currency</string>
    <string name="wallet_amount">Amount</string>
    <string name="wallet_amount_hint">Amount of currency bought</string>
    <string name="wallet_bought_on">Date</string>
    <string name="wallet_bought_on_hint">Date of purchase</string>
    <string name="wallet_bought_at">Rate</string>
    <string name="wallet_bought_at_hint">Rate of purchase, e.g., 1, 10, 100, etc.</string>
    <string name="wallet_profit">Profit</string>
    <string name="wallet_profit_details">%1$s asset</string>
    <string name="wallet_text_rates_details"><![CDATA[
    Profit approximations for <b>%1$s</b> asset in the past 3 days.]]></string>
    <string name="wallet_message_reloaded">Profit recalculations completed.</string>
    <string name="wallet_text_at_source"><![CDATA[
    at <b>%1$s</b>]]></string>
    <string name="wallet_text_on_date"><![CDATA[
    on %1$s]]></string>
    <string name="wallet_text_initial_price"><![CDATA[
    Bought at: <b>%1$s</b> ]]></string>
    <string name="wallet_text_current_price"><![CDATA[
    Current price: <b>%1$s</b> ]]></string>
    <string name="wallet_text_profit_margin"><![CDATA[
    Profit margin (&#37;): <b>%1$s</b> ]]></string>
    <string name="wallet_text_duration"><![CDATA[
    Duration: <b>%1$s days</b> ]]></string>
    <string name="wallet_text_daily_change"><![CDATA[
    Daily change: <b>%1$s</b> ]]></string>
    <string name="wallet_text_daily_change_perc"><![CDATA[
    Daily change (&#37;): <b>%1$s</b> ]]></string>
    <string name="license_icons">
 - Icons by Icons8 LLC. Copyright (CC BY-ND 3.0) Icons8 LLC (https://icons8.com)
\n\n
 - Icons made by Freepik (http://www.freepik.com) from Flaticon (http://www.flaticon.com). Copyright (CC-3.0-BY).
\n\n
 - Cryptocoins by ALLIENWORKS (https://labs.allienworks.net/icons/cryptocoins)
    </string>
    <string name="license_lib01">
The MIT License (MIT)
\n\n
Copyright (c) 2014 Oleksandr Melnykov
\n\n
Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
\n\n
The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
\n\n
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
    </string>
</resources>