<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="net.vexelon.currencybg.MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_48dp"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sources"
        android:icon="@drawable/ic_exchanges"
        android:title="@string/action_sources"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_rate"
        android:orderInCategory="8"
        android:title="@string/action_rate"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_filter"
        android:orderInCategory="9"
        android:title="@string/action_filter"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="10"
        android:title="@string/action_sort"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="11"
        android:title="@string/action_share"
        app:showAsAction="never"/>

</menu>
