<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="left"
    android:orientation="vertical">

    <!-- currency type -->
    <Spinner
        android:id="@+id/wallet_entry_currency"
        style="@android:style/Widget.Holo.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <!-- amount -->
    <TextView
        style="@style/FontWalletEntryInputText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/wallet_amount"/>

    <EditText
        android:id="@+id/wallet_entry_amount"
        style="@style/FontWalletEntryInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="@string/wallet_amount_hint"
        android:inputType="numberDecimal"/>

    <!-- bought at/rate -->
    <TextView
        style="@style/FontWalletEntryInputText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/wallet_bought_at"/>

    <EditText
        android:id="@+id/wallet_entry_bought_at"
        style="@style/FontWalletEntryInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="@string/wallet_bought_at_hint"
        android:inputType="numberDecimal"/>

    <!-- bought on/date -->
    <TextView
        style="@style/FontWalletEntryInputText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/wallet_bought_on"/>

    <TextView
        android:id="@+id/wallet_entry_bought_on"
        style="@style/FontWalletEntryInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="@string/wallet_bought_on_hint"/>

</LinearLayout>