<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="4dp">

    <TextView
        android:id="@+id/header_name"
        style="@style/FontListHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8sp"
        android:layout_toRightOf="@id/icon"
        android:layout_weight="2"
        android:text="@string/sell" />

    <TextView
        android:id="@+id/header_src_tavex"
        style="@style/FontListHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:gravity="right"
        android:text="@string/source_tavex" />

    <TextView
        android:id="@+id/header_src_polana1"
        style="@style/FontListHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/header_src_tavex"
        android:layout_weight="1.3"
        android:gravity="right"
        android:paddingLeft="6sp"
        android:text="@string/source_polana" />

    <TextView
        android:id="@+id/header_src_fib"
        style="@style/FontListHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/header_src_polana1"
        android:layout_weight="0.9"
        android:gravity="right"
        android:paddingLeft="6sp"
        android:text="@string/source_fib" />

</LinearLayout>
